tests/resource/valid/access/simple_list_access.mamba
def x := [1, 2, 3]

x[2]
x[1 .. 2 step 1]
x[1 ..= 2 step 1]
