tests/resource/invalid/type/access/slice_end_wrong_type.mamba
x = [1, 2, 3]
x[1 ..= "b" step 2]


